# event_horizon/api/event/schemas.py
@@ -2,10 +2,12 @@ from apiflask.fields import Boolean, DateTime, Dict, Integer, Nested, String
 from apiflask.validators import Length
 
 from event_horizon.api import CamelCaseSchema, MetadataSchema, PaginationQuery
+from event_horizon.api.alert.schemas import AlertDTO
 
 
 class EventFilters(PaginationQuery):
     with_data = Boolean()
+    with_alerts = Boolean()
 
 
 class EventDataDTO(MetadataSchema):
@@ -24,6 +26,7 @@ class EventDTO(MetadataSchema):
     start_date = DateTime(required=True)
     end_date = DateTime(required=True)
     event_data = Nested(EventDataDTO(many=True))
+    alerts = Nested(AlertDTO(many=True))
 
 
 class EventRequestDTO(CamelCaseSchema):
